p2/conf/app1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1 
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: app1 
  template:
    metadata:
      labels:
        app: app1 
    spec:
      containers:
      - name: app1 
        image: milokih351/app1:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - name: app1-port 
    protocol: TCP
    port: 80
    targetPort: 80
