p2/conf/app2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2 
  template:
    metadata:
      labels:
        app: app2 
    spec:
      containers:
      - name: app2 
        image: milokih351/app2:latest
        ports:
        - containerPort: 80
---


apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2 
  ports:
  - name: app2-port 
    protocol: TCP
    port: 80
    targetPort: 80
