p2/conf/app3_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3 
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: app3 
  template:
    metadata:
      labels:
        app: app3 
    spec:
      containers:
      - name: app3 
        image: milokih351/app3:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
  - name: app3-port 
    protocol: TCP
    port: 80
    targetPort: 80
